--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -3,9 +3,16 @@
     width: 100px;
     height: 100px;
     border-radius: 10px;
-    margin: 20px;
+    margin: 20px 20px 10px 20px;
 }
 .body:hover {
-    background-color: #0070A5;
-    color: white;
+    width: 110px;
+    height: 110px;
+    margin: 15px 15px 5px 15px;
+    transition: ALL 0.4s linear;
+}
+.name {
+    color: black;
+    font-size: 14px;
+    padding-bottom: 10px;
 }
