--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -1,9 +1,10 @@
 .body {
-    border: 1px solid #0070A5;
+    border: 1px solid lightgrey;
     width: 100px;
     height: 100px;
     border-radius: 10px;
     margin: 20px 20px 10px 20px;
+    box-shadow: 0 5px 28px 0 rgba(0,0,0,.1);
 }
 .body:hover {
     width: 110px;
