--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+a {
+  text-decoration: none;
+}
 .App {
   text-align: center;
-  max-width: 700px;
+  max-width: 800px;
 }
 .CardsButtons {
   display: flex;
@@ -8,13 +11,12 @@
   flex-wrap: wrap;
 }
 .CopyRight {
-  color: #0070A5;
+  margin: 40px;
+  color: #b9b9b9;
   font-size: 14px;
 }
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.CopyRight>a {
+  color: #b9b9b9;
 }
 
 .App-header {
@@ -24,18 +26,5 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #0070A5;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
