--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -1,5 +1,5 @@
 .body {
-    border: 1px solid lightgrey;
+    border: 1px solid white;
     width: 100px;
     height: 100px;
     border-radius: 10px;
