--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@ a {
 .App {
   text-align: center;
   max-width: 800px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.34);
+  padding-left: 40px;
+  padding-right: 40px;
 }
 .CardsButtons {
   display: flex;
