--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -1,10 +1,11 @@
 .body {
-    border: 1px solid white;
+    border: 1px solid rgba(32, 4, 59, 0.67);
     width: 100px;
     height: 100px;
     border-radius: 10px;
     margin: 20px 20px 10px 20px;
-    box-shadow: 0 5px 28px 0 rgba(0,0,0,.1);
+    box-shadow: 0 5px 28px 0 rgba(32, 4, 59, 0.67);
+    background-color: rgba(0, 0, 0, 0.67);
 }
 .body:hover {
     width: 110px;
@@ -13,7 +14,7 @@
     transition: ALL 0.4s linear;
 }
 .name {
-    color: black;
+    color: White;
     font-size: 14px;
     padding-bottom: 10px;
 }
