--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -4,8 +4,8 @@
     height: 100px;
     border-radius: 10px;
     margin: 20px 20px 10px 20px;
-    box-shadow: 0 5px 28px 0 rgba(32, 4, 59, 0.67);
-    background-color: rgba(0, 0, 0, 0.67);
+    box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);
+    /*background-color: rgba(0, 0, 0, 0.67);*/
 }
 .body:hover {
     width: 110px;
