--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -7,6 +7,18 @@
     box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);
     /*background-color: rgba(0, 0, 0, 0.67);*/
 }
+@media (max-width: 700px) {
+    .body {
+        width: 50px;
+        height: 50px;
+        margin: 15px 15px 10px 15px;
+    }
+    .body:hover {
+        width: 50px!important;
+        height: 50px!important;
+        margin: 15px 15px 10px 15px!important;
+    }
+}
 .body:hover {
     width: 110px;
     height: 110px;
