--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-
 }
 
 code {
@@ -22,6 +21,14 @@ a {
   background-color: rgba(0, 0, 0, 0.34);
   padding: 40px;
   border-radius: 40px;
+}
+@media (max-width: 700px) {
+  .App {
+    padding: 20px;
+  }
+  body {
+    background-position: 20%;
+  }
 }
 .CardsButtons {
   display: flex;
