--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -5,7 +5,10 @@
     border-radius: 10px;
     margin: 20px 20px 10px 20px;
     box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);
-    /*background-color: rgba(0, 0, 0, 0.67);*/
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.03);
 }
 @media (max-width: 700px) {
     .body {
