Адаптивный размер иконок и подписи

--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -10,16 +10,19 @@
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0.03);
 }
-@media (max-width: 700px) {
+@media (max-width: 500px) {
     .body {
-        width: 50px;
-        height: 50px;
+        width: 20vw;
+        height: 20vw;
         margin: 15px 15px 10px 15px;
     }
     .body:hover {
-        width: 50px!important;
-        height: 50px!important;
+        width: 20vw!important;
+        height: 20vw!important;
         margin: 15px 15px 10px 15px!important;
+    }
+    .name {
+        font-size: 3vw!important;
     }
 }
 .body:hover {
