--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,14 @@ a {
   padding: 40px;
   border-radius: 40px;
 }
+.App>p {
+  text-align: left;
+}
 @media (max-width: 700px) {
   .App {
     padding: 20px;
+    border-radius: 0;
+    background-color: rgba(185, 185, 185, 0);
   }
   body {
     background-position: 20%;
