--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+h1, h2, h3, h4, h5 {
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+.text-center {
+ text-align: center!important;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,10 +13,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  font-weight: 200;
+  letter-spacing: 1px;
 }
-
 a {
   text-decoration: none;
+  color: white;
+}
+.link {
+  padding-bottom: 3px;
+  box-shadow: 0 4px 4px -4px white;
 }
 .App {
   text-align: center;
@@ -50,6 +63,16 @@ a {
   padding: 20px;
   border-radius: 10px;
   border: 0;
-  background-color: rgba(35, 231, 231, 0.5);
+  background-color: #019ec7;
   font-size: 20px;
+  color: white;
+}
+
+/*Оформление текста*/
+.accent {
+  background-color: #c10865;
+  padding: 20px;
+  border-radius: 20px;
+  font-size: 20px;
+  margin: 40px 0px;
 }
