--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   text-align: center;
   font-weight: 200;
   letter-spacing: 1px;
+  background-attachment: fixed;
 }
 a {
   text-decoration: none;
@@ -41,7 +42,8 @@ a {
     background-color: rgba(185, 185, 185, 0);
   }
   body {
-    background-position: 20%;
+    background-position: 100%;
+    background-size: auto!important;
   }
 }
 .CardsButtons {
