--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -3,7 +3,7 @@
     width: 100px;
     height: 100px;
     border-radius: 10px;
-    margin: 20px 20px 10px 20px;
+    /* margin: 20px 20px 10px 20px; */
     /*box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);*/
     background-size: contain;
     background-position: center;
@@ -14,22 +14,21 @@
     .body {
         width: 20vw;
         height: 20vw;
-        margin: 15px 15px 10px 15px;
-    }
-    .body:hover {
-        width: 20vw!important;
-        height: 20vw!important;
-        margin: 15px 15px 10px 15px!important;
+        /* margin: 15px 15px 10px 15px; */
     }
     .name {
         font-size: 3vw!important;
     }
 }
-.body:hover {
-    width: 110px;
-    height: 110px;
-    margin: 15px 15px 5px 15px;
-    transition: ALL 0.4s linear;
+.cardHover:hover {
+    transform: scale(1.1);
+    /* width: 110px;
+    height: 110px; */
+    /* margin: 15px 15px 5px 15px; */
+    /* transition: ALL 0.4s linear; */
+}
+.cardHover{
+    transition: .3s;
 }
 .name {
     color: #494D4E;
