--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -1,7 +1,7 @@
 .body {
     /*border: 1px solid rgba(32, 4, 59, 0.67);*/
-    width: 100px;
-    height: 100px;
+    width: 8vw;
+    height: 8vw;
     border-radius: 10px;
     /* margin: 20px 20px 10px 20px; */
     /*box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);*/
@@ -10,14 +10,14 @@
     background-repeat: no-repeat;
     /*background-color: rgba(255, 255, 255, 0.03);*/
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
     .body {
-        width: 20vw;
-        height: 20vw;
+        width: 25vw;
+        height: 25vw;
         /* margin: 15px 15px 10px 15px; */
     }
     .name {
-        font-size: 3vw!important;
+        font-size: 5vw!important;
     }
 }
 .cardHover:hover {
@@ -32,6 +32,7 @@
 }
 .name {
     color: #494D4E;
-    font-size: 14px;
+    font-size: 2.3vw;
     padding-bottom: 10px;
+    padding-top: 30px;
 }
