--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -10,14 +10,24 @@
     background-repeat: no-repeat;
     /*background-color: rgba(255, 255, 255, 0.03);*/
 }
-@media (max-width: 800px) {
+@media (max-width: 700px) {
     .body {
         width: 25vw;
         height: 25vw;
         /* margin: 15px 15px 10px 15px; */
     }
     .name {
-        font-size: 5vw!important;
+        /*font-size: 5vw!important;*/
+    }
+}
+@media (max-width: 900px) {
+    .body {
+        width: 15vw;
+        height: 15vw;
+        /* margin: 15px 15px 10px 15px; */
+    }
+    .name {
+        /*font-size: 5vw!important;*/
     }
 }
 .cardHover:hover {
@@ -32,7 +42,7 @@
 }
 .name {
     color: #494D4E;
-    font-size: 2.3vw;
+    font-size: calc(1em + .6vw);
     padding-bottom: 10px;
     padding-top: 30px;
 }
