--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,35 @@ h1, h2, h3, h4, h5 {
   font-weight: 300;
   letter-spacing: 1px;
 }
+h1 {
+  padding: 50px 0 50px 0;
+  font-size: calc(3.3rem + .6vw);
+  text-transform: uppercase;
+}
+h1>p {
+  font-size: calc(0.8rem + .3vw);
+  text-transform: uppercase;
+}
+h2 {
+  font-size: calc(1.7rem + .6vw);
+  text-transform: uppercase;
+}
+h3 {
+  font-size: calc(1.3rem + .6vw);
+  text-transform: uppercase;
+}
 .text-center {
  text-align: center!important;
 }
+#root {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,36 +40,46 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   font-weight: 200;
+  font-size: calc(0.5em + .5vw);
   letter-spacing: 1px;
   background-attachment: fixed;
 }
 a {
   text-decoration: none;
-  color: white;
+  /*color: white;*/
 }
 .link {
   padding-bottom: 3px;
-  box-shadow: 0 4px 4px -4px white;
+  box-shadow: 0 4px 1px -4px black;
 }
 .App {
   /* Rectangle 44 */
-  background: rgba(255, 255, 255, 0.16);
+  background: rgba(255, 255, 255, 0.46);
   backdrop-filter: blur(21px);
   /* Note: backdrop-filter has minimal browser support */
   border-radius: 44px;
+  padding: 60px 0;
 }
 .App>p {
   text-align: left;
 }
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .App {
     padding: 20px;
     border-radius: 0;
-    background-color: rgba(185, 185, 185, 0);
+    /*background-color: rgba(185, 185, 185, 0.46);*/
   }
   body {
     /*background-position: 100%;*/
     /*background-size: auto!important;*/
+  }
+  #root {
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+  h1 {
+    padding: 20px 0 20px 0;
+    /*font-size: calc(2.3rem + .6vw);*/
   }
 }
 .CardsButtons {
@@ -72,9 +108,11 @@ a {
 
 /*Оформление текста*/
 .accent {
-  background-color: #c10865;
-  padding: 20px;
+  /*background-color: #c10865;*/
+  background-color: #7d9900;
+  padding: 40px;
   border-radius: 20px;
-  font-size: 20px;
-  margin: 40px 0px;
+  font-size: calc(1.7rem + .6vw);
+  margin: 0px 40px;
+  color: white;
 }
