--- a/src/components/Blocks/accent/Accent.module.css
+++ b/src/components/Blocks/accent/Accent.module.css
@@ -7,3 +7,14 @@
     margin: 0 40px;
     color: white;
 }
+@media (max-width: 800px) {
+    .accent {
+        /*background-color: #c10865;*/
+        background-color: #7d9900;
+        padding: 20px;
+        border-radius: 20px;
+        font-size: calc(1rem + .6vw);
+        margin: 0;
+        color: white;
+    }
+}
