--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -39,7 +39,7 @@
 }
 .name {
     /*color: #494D4E;*/
-    color: white;
+    color: black;
     font-size: calc(1em + .6vw);
     padding-bottom: 10px;
     padding-top: 30px;
