--- a/src/components/Pages/Bitrix24/Bitrix24.module.css
+++ b/src/components/Pages/Bitrix24/Bitrix24.module.css
@@ -1,34 +1,8 @@
-.description {
-    border-radius: 20px;
-    padding: 0px 40px;
-}
-.body {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-.description>p {
-    text-align: left;
-    font-size: calc(1rem + .6vw);
-}
-.item {
-    width: 50%;
-}
-.item>img {
-    width: 100%;
-}
-.item100 {
-    width: 100%;
-}
 .block {
     padding: 60px 0 0 0;
 }
 @media (max-width: 800px) {
-    .img {
-        width: 100%;
-    }
-    .item {
-        width: 100%;
-        /*min-width: 400px;*/
+    .block {
+        padding: 0;
     }
 }
