--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5 {
-  font-weight: 300;
+  font-weight: 200;
   letter-spacing: 1px;
 }
 h1 {
@@ -40,7 +40,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   font-weight: 200;
-  font-size: calc(0.5em + .5vw);
+  /*font-size: calc(0.5em + .5vw);*/
+  font-size: calc(1rem + .6vw);
   letter-spacing: 1px;
   background-attachment: fixed;
   /*color: white;*/
@@ -55,7 +56,7 @@ a {
 }
 .App {
   /* Rectangle 44 */
-  background: rgba(255, 255, 255, 0.14);
+  /*background: rgba(255, 255, 255, 0.14);*/
   backdrop-filter: blur(70px);
   /* Note: backdrop-filter has minimal browser support */
   border-radius: 44px;
@@ -66,7 +67,7 @@ a {
 }
 @media (max-width: 800px) {
   .App {
-    padding: 10%;
+    padding: 0 15px;
     border-radius: 0;
     /*background-color: rgba(185, 185, 185, 0.46);*/
   }
