--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -2,8 +2,8 @@
     /*border: 1px solid rgba(32, 4, 59, 0.67);*/
     width: 10vw;
     height: 10vw;
-    border-radius: 10px;
-    /* margin: 20px 20px 10px 20px; */
+    /*border-radius: 10px;*/
+    margin: auto;
     /*box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);*/
     background-size: contain;
     background-position: center;
