Модально еокно от bootstrap

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,13 @@ a {
 .carousel-indicators {
   top: 0;
 }
+
+.btn-primary {
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  border: 0;
+  background-color: #019ec7;
+  font-size: 20px;
+  color: white;
+}
