--- a/src/components/Blocks/accent/Accent.module.css
+++ b/src/components/Blocks/accent/Accent.module.css
@@ -1,6 +1,6 @@
 .accent {
-    /*background-color: #c10865;*/
-    background-color: #7d9900;
+    background-color: #c10865;
+    /*background-color: #7d9900;*/
     padding: 40px;
     border-radius: 20px;
     font-size: calc(1rem + .6vw);
