--- a/src/components/CardButton/CardButton.module.css
+++ b/src/components/CardButton/CardButton.module.css
@@ -1,7 +1,7 @@
 .body {
     /*border: 1px solid rgba(32, 4, 59, 0.67);*/
-    width: 10vw;
-    height: 10vw;
+    width: 8vw;
+    height: 8vw;
     /*border-radius: 10px;*/
     margin: auto;
     /*box-shadow: 0 5px 38px 0 rgba(0, 0, 0, 0.2);*/
@@ -12,18 +12,18 @@
 }
 @media (max-width: 760px) {
     .body {
-        width: 25vw;
-        height: 25vw;
+        width: 15vw;
+        height: 15vw;
         /* margin: 15px 15px 10px 15px; */
     }
     .name {
-        font-size: 5vw!important;
+        font-size: 4vw!important;
     }
 }
 @media (min-width: 1024px) {
     .body {
-        width: 6vw;
-        height: 6vw;
+        width: 4vw;
+        height: 4vw;
         /* margin: 15px 15px 10px 15px; */
     }
 }
@@ -40,7 +40,7 @@
 .name {
     /*color: #494D4E;*/
     color: black;
-    font-size: calc(1em + .6vw);
+    font-size: calc(.5em + .4vw);
     padding-bottom: 10px;
     padding-top: 30px;
 }
