--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 h1, h2, h3, h4, h5 {
   font-weight: 200;
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
 h1 {
-  /*padding: 50px 0 50px 0;*/
-  font-size: calc(3.3rem + .6vw);
-  text-transform: uppercase;
+  font-size: calc(2.3rem + .6vw);
   font-weight: 300;
 }
 h1>p {
@@ -14,11 +13,9 @@ h1>p {
 }
 h2 {
   font-size: calc(1.7rem + .6vw);
-  text-transform: uppercase;
 }
 h3 {
   font-size: calc(1.3rem + .6vw);
-  text-transform: uppercase;
 }
 .text-center {
  text-align: center!important;
@@ -63,37 +60,34 @@ a {
   box-shadow: 0 4px 1px -4px black;
 }
 .App {
-  /* Rectangle 44 */
-  /*background: rgba(255, 255, 255, 0.14);*/
   backdrop-filter: blur(70px);
-  /* Note: backdrop-filter has minimal browser support */
-  /*border-radius: 44px;*/
-  /*height: 100vh;*/
   padding: 0 60px;
+  min-height: 100vh;
 }
 .App>p {
   text-align: left;
 }
-@media (max-width: 800px) {
-  .App {
-    padding: 0 15px;
-    border-radius: 0;
-    /*background-color: rgba(185, 185, 185, 0.46);*/
-  }
-  body {
-    /*background-position: 100%;*/
-    /*background-size: auto!important;*/
-  }
+@media (max-width: 1200px) {
   #root {
     padding-left: 0;
     padding-right: 0;
   }
   h1 {
     padding: 20px 0 20px 0;
-    /*font-size: calc(2.3rem + .6vw);*/
   }
 }
-
+@media (max-width: 720px) {
+  .App {
+    padding: 0 30px;
+  }
+  .carousel-indicators {
+    display: none;
+  }
+  .carousel-control-next, .carousel-control-prev {
+    top: -165px!important;
+    bottom: 100%;
+  }
+}
 .CopyRight {
   margin: 40px;
   color: #494D4E;
@@ -109,11 +103,12 @@ a {
   position: relative;
   bottom: 0;
 }
+
 .carousel-indicators {
-  top: -15px;
+  top: -30px;
 }
 .carousel-control-next, .carousel-control-prev {
-  top: -20px;
+  top: -120px;
   bottom: 100%;
 }
 
