--- a/src/components/Pages/Main/Main.module.css
+++ b/src/components/Pages/Main/Main.module.css
@@ -1,18 +1,35 @@
 .logo {
-    margin: 20px 0;
+    margin: 10px 0 40px 0;
 }
 .logo img {
-    padding-top: 5vh;
-    padding-bottom: 5vh;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
-@media (max-width: 800px) {
+.sublogo {
+    font-size: calc(.5rem + .5vw);
+    margin-top: -30px;
+    font-weight: 500;
+}
+.rowheader {
+    margin-left: -30px;
+    margin-right: -30px;
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+}
+@media (max-width: 720px) {
     .logo {
         margin: 10px;
     }
     .logo img {
         width: 80%;
-        padding-top: 5vh;
-        padding-bottom: 5vh;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+    .sublogo {
+        margin-top: -30px;
     }
 }
 .CardsButtons {
