--- a/src/components/Pages/Main/Main.module.css
+++ b/src/components/Pages/Main/Main.module.css
@@ -11,8 +11,9 @@
     font-weight: 500;
 }
 .rowheader {
-    margin-left: -30px;
-    margin-right: -30px;
+    padding: 0 30px;
+    /*margin-left: -30px;*/
+    /*margin-right: -30px;*/
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
     display: flex;
@@ -20,6 +21,9 @@
     margin-top: calc(-1 * var(--bs-gutter-y));
 }
 @media (max-width: 720px) {
+    .mobileMainBody {
+        padding: 30px;
+    }
     .logo {
         margin: 10px;
     }
