--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,9 @@ h3 {
   margin-left: auto;
   margin-right: auto;
 }
-
+.main {
+  padding: 0 30px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -78,7 +80,7 @@ a {
 }
 @media (max-width: 720px) {
   .App {
-    padding: 0 30px;
+    padding: 0;
   }
   .carousel-indicators {
     display: none;
