--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,11 @@ a {
   font-size: 20px;
   color: white;
 }
+.anim-appear {
+  opacity: 0.01;
+}
+
+.anim-appear.anim-appear-active{
+  opacity: 2;
+  transition: opacity .5s ease-in-out;
+}
