--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ a {
 }
 
 .carousel-caption {
-  background-color: rgba(255, 255, 255, 0.9);
+  /*background-color: rgba(255, 255, 255, 0.9);*/
   border-radius: 15px;
   width: 100%;
   margin-left: -15%;
