--- a/src/components/Blocks/WhiteBlock/WhiteBlock.module.css
+++ b/src/components/Blocks/WhiteBlock/WhiteBlock.module.css
@@ -3,6 +3,7 @@
     margin-left: -90px;
     margin-right: -90px;
     padding: 60px;
+    border-radius: 2.5vh;
 }
 @media (max-width: 800px) {
     .block {
@@ -10,5 +11,6 @@
         padding: 60px 15px;
         margin-left: -30px;
         margin-right: -30px;
+        border-radius: 0;
     }
 }
