--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ a {
   box-shadow: 0 4px 1px -4px black;
 }
 .App {
-  backdrop-filter: blur(70px);
+  /*backdrop-filter: blur(30px);*/
   padding: 0 60px;
   min-height: 100vh;
 }
