--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,26 @@ a {
   opacity: 2;
   transition: opacity .5s ease-in-out;
 }
+.nav-link {
+  color: #4c7ac2;
+}
+
+.nav-tabs .nav-link {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  font-weight: 200;
+}
+.nav {
+  justify-content: center;
+}
+.nav-tabs .nav-link.active {
+  color: #4c7ac2;
+  background-color: #4c7ac217;
+  border-color: #4c7ac217 #4c7ac217 #4c7ac2;
+}
+.nav-tabs .nav-link:hover {
+  border-color: #4c7ac217 #4c7ac217 #4c7ac2;
+}
+.nav-tabs {
+  border-bottom: 1px solid #4c7ac217;
+}
