--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,26 @@ h3 {
 }
 .main {
   padding: 0 30px;
+  margin-top: 190px;
+}
+.rowheader {
+  padding: 0 30px;
+  /*margin-left: -30px;*/
+  /*margin-right: -30px;*/
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /*background-color: #ccf3fec9;*/
+  background: linear-gradient(to bottom, #ccf3fe, rgba(0, 0, 0, 0));
+  backdrop-filter: blur(7px);
+  /*background-image: url("/images/fon2.jpg");*/
 }
 body {
   margin: 0;
