--- a/src/components/Pages/Main/Main.module.css
+++ b/src/components/Pages/Main/Main.module.css
@@ -12,7 +12,7 @@
 }
 @media (max-width: 720px) {
     .mobileMainBody {
-        padding: 30px;
+        /*padding: 30px;*/
     }
     .logo {
         margin: 10px;
