--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,12 @@ a {
     top: -165px!important;
     bottom: 100%;
   }
+  .main {
+    margin-top: 140px;
+  }
+  .nav {
+    background: #bee5f9!important;
+  }
 }
 .CopyRight {
   margin: 40px;
@@ -162,6 +168,10 @@ a {
 }
 .nav {
   justify-content: center;
+  background-color: white;
+  margin-left: -30px;
+  margin-right: -30px;
+  background: linear-gradient(to right, #4c7ac200, #FFFFFF, #4c7ac200);
 }
 .nav-tabs .nav-link.active {
   color: #4c7ac2;
