--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,7 @@ a {
   background-color: white;
   margin-left: -30px;
   margin-right: -30px;
-  background: linear-gradient(to right, #4c7ac200, #FFFFFF, #4c7ac200);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff, rgba(255, 255, 255, 0));
 }
 .nav-tabs .nav-link.active {
   color: #4c7ac2;
