--- a/src/components/Blocks/Separator/Separator.module.css
+++ b/src/components/Blocks/Separator/Separator.module.css
@@ -1,5 +1,6 @@
 .line {
     border-bottom: solid 3px #27272714;
     width: 100px;
-    margin: 30px 0;
+    margin-top: -30px;
+    margin-bottom: 60px;
 }
