--- a/src/components/Blocks/accent/Accent.module.css
+++ b/src/components/Blocks/accent/Accent.module.css
@@ -1,5 +1,5 @@
 .accent {
-    background-color: #c10865;
+    background-color: var(--color-accent);
     padding: 40px;
     border-radius: 20px;
     font-size: calc(1rem + .6vw);
