--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+/*Глобальные переменные*/
+:root {
+  --color-primary: #4c7ac2;
+  --color-primary-10: #4c7ac217;
+  --color-blue: #019ec7;
+  --color-blue-light: #bee5f9;
+  --color-accent: #c10865;
+}
 h1, h2, h3, h4, h5 {
   font-weight: 200;
   letter-spacing: 1px;
@@ -113,25 +121,24 @@ a {
     margin-top: 140px;
   }
   .nav {
-    background: #bee5f9!important;
+    background: var(--color-blue-light)!important;
   }
 }
 .CopyRight {
   margin: 40px;
-  color: #494D4E;
+  color: var(--color-blue);
   font-size: 10px;
   position: revert;
 }
 
+/*Карусель bootstrap*/
 .carousel-caption {
-  /*background-color: rgba(255, 255, 255, 0.9);*/
   border-radius: 15px;
   width: 100%;
   margin-left: -15%;
   position: relative;
   bottom: 0;
 }
-
 .carousel-indicators {
   top: -30px;
 }
@@ -139,15 +146,21 @@ a {
   top: -120px;
   bottom: 100%;
 }
-
+/* Конец - Карусель bootstrap*/
 .btn-primary {
   margin: 20px;
   padding: 20px;
   border-radius: 10px;
   border: 0;
-  background-color: #019ec7;
+  background-color: var(--color-blue);
   font-size: 20px;
   color: white;
+}
+.btn-primary:hover {
+  background-color: var(--color-primary);
+}
+.btn-primary:focus {
+  background-color: var(--color-primary);
 }
 .anim-appear {
   opacity: 0.01;
@@ -158,7 +171,7 @@ a {
   transition: opacity .5s ease-in-out;
 }
 .nav-link {
-  color: #4c7ac2;
+  color: var(--color-primary);
 }
 
 .nav-tabs .nav-link {
@@ -174,13 +187,13 @@ a {
   background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff, rgba(255, 255, 255, 0));
 }
 .nav-tabs .nav-link.active {
-  color: #4c7ac2;
-  background-color: #4c7ac217;
-  border-color: #4c7ac217 #4c7ac217 #4c7ac2;
+  color: var(--color-primary);
+  /*background-color: var(--color-primary-10);*/
+  border-color: var(--color-primary-10) var(--color-primary-10) #4c7ac2;
 }
 .nav-tabs .nav-link:hover {
-  border-color: #4c7ac217 #4c7ac217 #4c7ac2;
+  border-color: var(--color-primary-10) var(--color-primary-10) #4c7ac2;
 }
 .nav-tabs {
-  border-bottom: 1px solid #4c7ac217;
+  border-bottom: 3px solid var(--color-primary-10);
 }
