--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,6 @@ h3 {
 }
 .rowheader {
   padding: 0 30px;
-  /*margin-left: -30px;*/
-  /*margin-right: -30px;*/
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
@@ -54,10 +52,8 @@ h3 {
   top: 0;
   left: 0;
   width: 100%;
-  /*background-color: #ccf3fec9;*/
-  /*background: linear-gradient(to bottom, #ccf3fe, rgba(0, 0, 0, 0));*/
   backdrop-filter: blur(7px);
-  /*background-image: url("/images/fon2.jpg");*/
+
 }
 body {
   margin: 0;
@@ -68,14 +64,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   font-weight: 200;
-  /*font-size: calc(0.5em + .5vw);*/
   font-size: calc(1rem + .6vw);
   letter-spacing: 1px;
   background-attachment: fixed;
   overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  /*color: white;*/
 }
 ::-webkit-scrollbar {
   width: 0;
@@ -83,14 +77,13 @@ body {
 }
 a {
   text-decoration: none;
-  /*color: white;*/
+  color: var(--color-primary);
 }
 .link {
   padding-bottom: 3px;
   box-shadow: 0 4px 1px -4px black;
 }
 .App {
-  /*backdrop-filter: blur(30px);*/
   padding: 0 60px;
   min-height: 100vh;
 }
