Шапка плавная анимация Для мобильной логотип не выперает

--- a/src/components/Pages/Main/Main.module.css
+++ b/src/components/Pages/Main/Main.module.css
@@ -1,14 +1,17 @@
 .logo {
     margin: 10px 0 40px 0;
+    transition: .5s;
 }
 .logo img {
     padding-top: 40px;
     padding-bottom: 40px;
+    transition: .5s;
 }
 .sublogo {
     font-size: calc(.5rem + .5vw);
     margin-top: -30px;
     font-weight: 500;
+    transition: .5s;
 }
 @media (max-width: 720px) {
     .mobileMainBody {
