Новые списки на странице TelegramBot.js

--- a/src/components/Pages/TelegramBot/TelegramBot.module.css
+++ b/src/components/Pages/TelegramBot/TelegramBot.module.css
@@ -1,6 +1,6 @@
 .listNumber {
     border-radius: 50%;
-    background-color: var(--bs-warning);
+    background-color: #ffc105;
     color: #ffffff;
     margin: 0 auto;
     width: 4vw;
