--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-blue: #019ec7;
   --color-blue-light: #bee5f9;
   --color-accent: #c10865;
+  --color-warning: #ffc105;
 }
 h1, h2, h3, h4, h5 {
   font-weight: 200;
@@ -125,7 +126,7 @@ a {
     display: none;
   }
   .carousel-control-next, .carousel-control-prev {
-    top: 0px!important;
+    top: 0!important;
     bottom: 100%;
   }
   .main {
