--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,7 @@ a {
     padding-bottom: 0;
   }
   .carousel-item img {
-    margin-top: -30px;
+    /*margin-top: -30px;*/
   }
 }
 .CopyRight {
