--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,8 @@ h3 {
   padding-right: 10%;
   margin-left: auto;
   margin-right: auto;
+  position: absolute;
+  z-index: 2;
 }
 .main {
   padding: 0 30px;
@@ -227,4 +229,8 @@ a {
 }
 .nav-tabs {
   border-bottom: 3px solid var(--color-primary-10);
+}
+.vanta-canvas {
+  width: 100vw!important;
+  height: 100vh!important;
 }
